# chorograph-gemini-cli-plugin

./: Cargo.toml  Package.swift  build.sh
.github/workflows/: bump-version.yml  release.yml
Sources/ChorographGeminiCLIPlugin/: LocalAuthManager.swift  ModelsDevClient.swift  Plugin.swift  Provider.swift  SettingsView.swift
src/: lib.rs
