[package]
name = "chorograph-gemini-cli-plugin-rust"
version = "1.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chorograph-plugin-sdk-rust = { git = "https://github.com/adevcorn/chorograph-plugin-sdk-rust.git", tag = "v0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
